tests/errors/constant-trig-fsm.fil
component main<G>(@interface<G, 1> go_G: 1) -> () {
  fsm M[5](10);
}
